force-app/main/default/objects/RGC_Salesforce_Support__c/RGC_Salesforce_Support__c.object-meta.xml
<CustomObject>
    <label>RGC Salesforce Support</label>
    <nameField>
        <displayFormat>SUP-{00000}</displayFormat>
        <label>RGC Salesforce Support Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RGC Salesforce Support</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>