force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JG 06.15.20</description>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User selected is not a member of Internal Support Team.</errorMessage>
        <filterItems>
            <field>User.Internal_Support_Team__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RGC_Salesforce_Support</relationshipName>
    <type>Lookup</type>
</CustomField>