force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Internal_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed to Jira</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Won&apos;t Do</fullName>
            </value>
            <value>
                <fullName>Not Planned</fullName>
                <isActive>false</isActive>
                <label>Not Planned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>