force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Created_by_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Logged_In_User__c</fullName>
    <formula>$User.Id  =  CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Logged In User</label>
    <type>Checkbox</type>
</CustomField>