force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Created_on_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>Created_on_Behalf_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created on Behalf Of</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issues_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>