force-app/main/default/objects/RGC_Salesforce_Support__c/fields/How_is_this_impacting_you__c.field-meta.xml
<CustomField>
    <fullName>How_is_this_impacting_you__c</fullName>
    <label>How is this impacting you?</label>
    <type>TextArea</type>
</CustomField>