force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <defaultValue>&apos;Add any helpful screenshots above. To attach files, upload to &quot;Notes &amp; Attachments&quot; after your request is saved.&apos;</defaultValue>
    <inlineHelpText>Add any necessary screenshots above. To attach a file, upload to &quot;Notes &amp; Attachments&quot; after you save your request.</inlineHelpText>
    <label>Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>