force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>