force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Is_this_a_request_for_new_functionality__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_request_for_new_functionality__c</fullName>
    <label>Is this a request for new functionality?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>