force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Link_to_Related_Page__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Related_Page__c</fullName>
    <inlineHelpText>Please copy and paste the URL of the page you are seeing an error on or would like enhanced</inlineHelpText>
    <label>Link to Related Page</label>
    <type>Url</type>
</CustomField>