force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Linked_Issue_Request__c.field-meta.xml
<CustomField>
    <fullName>Linked_Issue_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Issue/Request</label>
    <referenceTo>RGC_Salesforce_Support__c</referenceTo>
    <relationshipName>Issues_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>