force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Linked_IssueRequest__c.field-meta.xml
<CustomField>
    <fullName>Linked_IssueRequest__c</fullName>
    <label>Linked Issue/Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Of</fullName>
            </value>
            <value>
                <fullName>Related To</fullName>
            </value>
            <value>
                <fullName>Caused By</fullName>
            </value>
            <value>
                <fullName>Depends On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>