force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Resolution_Details__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Details__c</fullName>
    <inlineHelpText>Resolution information for the user that submitted the request, provided by the administrator that has reviewed this ticket.</inlineHelpText>
    <label>Resolution Details</label>
    <type>TextArea</type>
</CustomField>