force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Screenshot_s__c.field-meta.xml
<CustomField>
    <fullName>Screenshot_s__c</fullName>
    <inlineHelpText>Attach any necessary screenshots. To attach a file, upload to &quot;Notes &amp; Attachments&quot; after initial request creation.</inlineHelpText>
    <label>Screenshot(s)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>