force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>CASE( Internal_Status__c , 
&quot;New&quot;, &quot;New&quot;,
&quot;In Review&quot;, &quot;In Review&quot;, 
&quot;In Progress&quot;, &quot;In Review&quot;, 
&quot;On Hold&quot;, &quot;On Hold&quot;, 

CASE( Closed_Reason__c, 
&quot;Closed to Jira&quot;, &quot;On the Roadmap&quot;, 
&quot;Done&quot;, &quot;Resolved&quot;, 
&quot;Duplicate&quot;, &quot;Combined with Existing Issue&quot;, 
&quot;Won&apos;t Do&quot;, &quot;Not on the Roadmap&quot;, 
&quot;&quot;
)




)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>