force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Support_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Request_Type__c</fullName>
    <label>Support Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Admin/Setup</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>