force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Where_should_this_change_be_made__c.field-meta.xml
<CustomField>
    <fullName>Where_should_this_change_be_made__c</fullName>
    <inlineHelpText>Please include information like the object/tab name, record type, field name, report/dashboard name, etc</inlineHelpText>
    <label>Where should this change be made?</label>
    <type>TextArea</type>
</CustomField>