force-app/main/default/objects/RGC_Salesforce_Support__c/fields/Which_pages_should_be_changed__c.field-meta.xml
<CustomField>
    <fullName>Which_pages_should_be_changed__c</fullName>
    <inlineHelpText>Please include information like the page/tab name, record type, field name, report/dashboard name, etc</inlineHelpText>
    <label>Which pages should be changed?</label>
    <type>TextArea</type>
</CustomField>