force-app/main/default/objects/RGC_Salesforce_Support__c/validationRules/Add_a_Closed_Reason_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_a_Closed_Reason_When_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Closed_Reason__c)) &amp;&amp;ISPICKVAL( Internal_Status__c , &quot;Closed&quot;)</errorConditionFormula>
    <errorDisplayField>Closed_Reason__c</errorDisplayField>
    <errorMessage>Select a Closed Reason</errorMessage>
</ValidationRule>