force-app/main/default/objects/RGC_Salesforce_Support__c/validationRules/Assign_Only_by_Internal_Support_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Assign_Only_by_Internal_Support_Team</fullName>
    <active>true</active>
    <errorConditionFormula>OR (

   IF( AND( $User.Internal_Support_Team__c == FALSE,  ISCHANGED( Assigned_To__c ) ), TRUE, FALSE), 

IF( AND( $User.Internal_Support_Team__c == FALSE,  ISNEW(),NOT(ISBLANK (Assigned_To__c ) )), TRUE, FALSE))</errorConditionFormula>
    <errorMessage>Only an Internal Support Team member can Assign a Support Ticket.</errorMessage>
</ValidationRule>