force-app/main/default/objects/RGC_Salesforce_Support__c/validationRules/Closed_Reason_For_Support_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Reason_For_Support_Team</fullName>
    <active>true</active>
    <errorConditionFormula>OR (

IF( AND( $User.Internal_Support_Team__c == FALSE, ISCHANGED(    Closed_Reason__c    ) ), TRUE, FALSE),

IF( AND( $User.Internal_Support_Team__c == FALSE, ISNEW(),NOT(ISBLANK (TEXT( Closed_Reason__c ) ))), TRUE, FALSE))</errorConditionFormula>
    <errorMessage>Only an Internal Support Team member can update Closed Reason.</errorMessage>
</ValidationRule>