force-app/main/default/objects/RGC_Salesforce_Support__c/validationRules/Internal_Comments_For_Support_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Comments_For_Support_Team</fullName>
    <active>true</active>
    <errorConditionFormula>OR (

IF( AND( $User.Internal_Support_Team__c == FALSE, ISCHANGED(     Internal_Comments__c    ) ), TRUE, FALSE),

IF( AND( $User.Internal_Support_Team__c == FALSE, ISNEW(),NOT(ISBLANK ( Internal_Comments__c ) )), TRUE, FALSE))</errorConditionFormula>
    <errorMessage>Only an Internal Support Team member can update Internal Comments.</errorMessage>
</ValidationRule>