force-app/main/default/objects/RGC_Salesforce_Support__c/validationRules/Internal_Status_Only_For_Support_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Status_Only_For_Support_Team</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( $User.Internal_Support_Team__c == FALSE, ISCHANGED( Internal_Status__c ) ), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Only an Internal Support Team member can update Internal Status.</errorMessage>
</ValidationRule>