force-app/main/default/objects/RGC_Salesforce_Support__c/validationRules/Linked_Issue_LU_Only_For_Support_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Linked_Issue_LU_Only_For_Support_Team</fullName>
    <active>true</active>
    <errorConditionFormula>OR (

IF( AND( $User.Internal_Support_Team__c == FALSE, ISCHANGED(      Linked_Issue_Request__c     ) ), TRUE, FALSE),

IF( AND( $User.Internal_Support_Team__c == FALSE, ISNEW(),NOT(ISBLANK (  Linked_Issue_Request__c       ))), TRUE, FALSE))</errorConditionFormula>
    <errorMessage>Only an Internal Support Team member can update Linked Issue/Request.</errorMessage>
</ValidationRule>