force-app/main/default/objects/RGC_Salesforce_Support__c/validationRules/Resolution_Details_For_Support_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Details_For_Support_Team</fullName>
    <active>true</active>
    <errorConditionFormula>OR (

IF( AND( $User.Internal_Support_Team__c == FALSE, ISCHANGED(   Resolution_Details__c   ) ), TRUE, FALSE),

IF( AND( $User.Internal_Support_Team__c == FALSE, ISNEW(),NOT(ISBLANK (Resolution_Details__c) )), TRUE, FALSE))</errorConditionFormula>
    <errorMessage>Only an Internal Support Team member can update Resolution Details.</errorMessage>
</ValidationRule>