force-app/main/default/objects/RGC_Salesforce_Support__c/validationRules/Support_Category_Only_For_Support_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_Category_Only_For_Support_Team</fullName>
    <active>true</active>
    <errorConditionFormula>OR (

IF( AND( $User.Internal_Support_Team__c == FALSE, ISCHANGED(   Support_Request_Type__c   ) ), TRUE, FALSE),

IF( AND( $User.Internal_Support_Team__c == FALSE, ISNEW(),NOT(ISBLANK (TEXT(  Support_Request_Type__c  ) ))), TRUE, FALSE))</errorConditionFormula>
    <errorMessage>Only an Internal Support Team member can update Support Category.</errorMessage>
</ValidationRule>