force-app/main/default/objects/RGC_Salesforce_Support__c/listViews/In_Review_Issues_Requests.listView-meta.xml
<ListView>
    <fullName>In_Review_Issues_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>In Review RGC Support Requests</label>
</ListView>