force-app/main/default/objects/RGC_Salesforce_Support__c/listViews/Issues_Requests_I_Submitted.listView-meta.xml
<ListView>
    <fullName>Issues_Requests_I_Submitted</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_by_Logged_In_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>RGC Support Requests I Submitted</label>
</ListView>