force-app/main/default/objects/RGC_Salesforce_Support__c/listViews/Issues_Requests_Owned_by_Me.listView-meta.xml
<ListView>
    <fullName>Issues_Requests_Owned_by_Me</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>RGC Support Requests Owned by Me</label>
</ListView>