force-app/main/default/objects/RGC_Salesforce_Support__c/listViews/New_Issues_Requests.listView-meta.xml
<ListView>
    <fullName>New_Issues_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New RGC Support Requests</label>
</ListView>